# b4msa

./: .gitignore  .travis.yml  AUTHORS.md  CONTRIBUTORS.md  MANIFEST.in  README.md  README.rst  appveyor.yml  build.sh  environment.yml  meta.yaml  pyproject.toml  readthedocs.yml  setup.py  utils.py
.github/workflows/: conda.yaml  pip.yaml  test.yaml
b4msa/: .travis.yml  __init__.py  classifier.py  command_line.py  lang_dependency.py  params.py  space.py  textmodel.py  utils.py  weighting.py
b4msa.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
b4msa/resources/: arabic.stopwords  emoticons.json  english.neg.stopwords  english.stopwords  italian.neg.stopwords  italian.stopwords  sp_stopwords.txt  spanish.neg.stopwords  spanish.stopwords
b4msa/tests/: __init__.py  test_classifier.py  test_command_line.py  test_lang_dependency.py  test_space.py  test_texmodel.py  test_textmodel.py  test_utils.py  test_weighting.py  text.json  text.xml  textI.json  text_ita_part.json  text_italiano_completo.json
b4msa/tools/: b4msa-kfolds  b4msa-params  b4msa-perf  b4msa-simulate-ensemble  b4msa-test  b4msa-textModel  b4msa-train  directvalidation.py
conda-recipe/: meta.yaml
continuous-integration/: binstar-push.py  move-conda-package.py
continuous-integration/appveyor/: install.ps1  rm_rf.py
docs/: Makefile
docs/source/: classifier.rst  conf.py  index.rst  lang_dependency.rst  weighting.rst
scripts/: b4msa-itarget.py
