[project]
name = "b4msa"
description = "Baselines for Multilingual Sentiment Analysis"
readme = "README.rst"
dependencies = [
    "numpy",
    "scikit-learn>=1.3.0",
    "microtc"
]
dynamic = ["version"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"    
]

authors = [
  {name = "Eric S. Tellez"},
  {name = "Sabino Miranda-Jiménez"},
  {name = "Mario Graff"},
  {name = "Daniela Moctezuma"},
  {name = "Ranyart R. Suárez"},
  {name = "Oscar S. Siordia"}
]

maintainers = [
  {name = "Mario Graff", email = "mgraffg@ieee.org"}
]

[tool.setuptools.dynamic]
version = {attr = 'b4msa.__version__'}

[project.urls]
Homepage = "https://b4msa.readthedocs.io"
Repository = "https://github.com/INGEOTEC/b4msa"
Issues = "https://github.com/INGEOTEC/b4msa/issues"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"